--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="app.triptix">
 
     <application
         android:allowBackup="true"
@@ -9,13 +10,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Motis"
+        android:theme="@style/Theme.Triptix"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="de.triptix.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Motis">
+            android:theme="@style/Theme.Triptix">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
